# zed-haproxy

./: .gitignore  Cargo.toml  INSTALL.md  README.md  build.sh  extension.toml  install-dev.sh  install-global.sh
languages/haproxy/: config.toml  highlights.scm
src/: lib.rs  lsp_server.rs
test/: haproxy.cfg  haproxy.conf
