[package]
name = "haproxy-zed"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "haproxy-lsp"
path = "src/lsp_server.rs"
required-features = ["lsp-server"]

[features]
default = []
lsp-server = ["dep:serde_json", "dep:serde", "dep:tree-sitter"]

[dependencies]
zed_extension_api = "0.1.0"

serde_json = { version = "1.0", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
tree-sitter = { version = "0.20", optional = true }
